Back-end: MS y API en Swagger Completado a falta de Pruebas
