# modulo_promocional_api/swagger_server/models/all_of_diccionario_datos_streaming.py
@@ -1,37 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server.models.streaming import STREAMING  # noqa: F401,E501
-from swagger_server import util
-
-
-class AllOfDiccionarioDatosStreaming(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self):  # noqa: E501
-        """AllOfDiccionarioDatosStreaming - a model defined in Swagger
-
-        """
-        self.swagger_types = {
-        }
-
-        self.attribute_map = {
-        }
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'AllOfDiccionarioDatosStreaming':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The AllOfDiccionarioDatosStreaming of this AllOfDiccionarioDatosStreaming.  # noqa: E501
-        :rtype: AllOfDiccionarioDatosStreaming
-        """
-        return util.deserialize_model(dikt, cls)
